Home Page redesign

--- a/index.html
+++ b/index.html
@@ -93,17 +93,38 @@
 <div id="what-area">
 <h2 id="what" class="banner">What do I do?</h2>
 <div class="textbox-area">
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImage" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></TD>
+<TD><DIV class="boxHeading">Dynamic Rock n Roll Vocalist and Heartfelt Crooner</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
 <ul>
 <li>Dynamic Rock n Roll Vocalist and Heartfelt Crooner</li>
 <li>My aim is ...to let you Jive the night away to the energetic sounds those classic Rock n Roll songs.</li>
-<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everley Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly, Frank Sinatra, Dean Martin, The Platters, Michael Buble and many more.</li>
-<li>Available for: Birthdays, Fetes, Fayres, Vintage Events, Parties, Dances, Church Events, OAP Homes, Care Homes, Hospices, etc...</li>
-<li>Based in Tamworth, Staffordshire, Midlands, UK</li>
+<li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everly Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly, Frank Sinatra, Dean Martin, The Platters, Michael Buble and many more.</li>
+</ul>
+</P>
+</DIV>
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImage" src="photos/andybgoode0010-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">Quality Vintage Entertainment</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+<ul>
+<li>Available for: Birthdays, Fayres, Fetes, Food Fayres, Vintage Events, Parties, Dances, Church Events, OAP Homes, Care Homes, Hospices, etc...</li>
+<li>Based in Tamworth, Staffordshire, Midlands</li>
 <li>I only use high quality backing tracks</li>
 <li>Fun 'Teddy boy' style outfit</li>
 <li>PA Provided for most events</li>
 <li>Current Public Liability Insurance</li>
 </ul>
+</P>
+</DIV>
+
 </div>
 </div>
 
@@ -111,14 +132,19 @@
 <div id="highlights-area">
 <h2 id="highlights" class="banner">Highlights</h2>
 <div class="textbox-area">
-<ul>
-<li>
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImage" src="photos/andybgoode0014-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">Swadlincote International Food and Drink Festival</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
 Saturday 15th October 2016 - 11am<br/>
-<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a> (Outside the 'Curly Magpie' vintage shop)<br/>
-A Food Festival in Swadlincote. 'Andy B Goode' will be performing at 11am.<br/>
+<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely 'Curly Magpie' vintage shop. I will be performing at 11am.<br/>
 Prepare yourself for Energetic 1950s Rock n Roll and tasty food from all over the world. It's gonna be great.
-</li>
-</ul>
+</P>
+</DIV>
+
 </div>
 </div>
 
