Home Page redesign - top info

--- a/index.html
+++ b/index.html
@@ -77,6 +77,24 @@
 
 <div id="info-area">
 <div class="textbox-area">
+
+<DIV class="boxPanelNoBorder">
+<P class='boxInfoArea'>
+<ul>
+<li>1950s/60s Rock and Roll / Swing Singer.</li>
+<li>Let me enliven your events with some fun vintage 'Rock n Roll' music.</li>
+<li>Get your feet moving on the dance floor to some vintage 'Rock n Roll' classics.</li>
+</ul>
+</P>
+</DIV>
+
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="images/andybgoode.png" alt="Andy B Goode Headshot"></a></TD></TR>
+</TABLE>
+</DIV>
+
+<!--
 <table>
 <tr>
 <td>
@@ -87,6 +105,8 @@
 <td><img id="andybgoode" src="images/andybgoode.png" alt="Andy B Goode Headshot"></td>
 </tr>
 </table>
+-->
+
 </div>
 </div>
 
@@ -102,7 +122,7 @@
 <P class='boxInfoArea'>
 <ul>
 <li>Dynamic Rock n Roll Vocalist and Heartfelt Crooner</li>
-<li>My aim is ...to let you Jive the night away to the energetic sounds those classic Rock n Roll songs.</li>
+<li>Jive the night away to the energetic sounds those classic Rock n Roll songs.</li>
 <li>Epic hits by: Chuck Berry, Bill Haley and his Comets, Eddie Cochran, Elvis, Danny and the Juniors, Everly Brothers, Johnny Tillotson, The Pengiuns, Buddy Holly, Frank Sinatra, Dean Martin, The Platters, Michael Buble and many more.</li>
 </ul>
 </P>
@@ -141,7 +161,8 @@
 <P class='boxInfoArea'>
 Saturday 15th October 2016 - 11am<br/>
 <a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely 'Curly Magpie' vintage shop. I will be performing at 11am.<br/>
-Prepare yourself for Energetic 1950s Rock n Roll and tasty food from all over the world. It's gonna be great.
+Prepare yourself for Energetic 1950s Rock n Roll and tasty food from all over the world.<br/>
+It's gonna be great.
 </P>
 </DIV>
 
@@ -159,7 +180,7 @@ Prepare yourself for Energetic 1950s Rock n Roll and tasty food from all over th
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.1.2</li>
+<li>website: v2.1.3</li>
 </ul>
 </div>
 </div>
