Home Page redesign - top info image size

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImageBigger" src="images/andybgoode.png" alt="Andy B Goode Headshot"></a></TD></TR>
+<TR><TD><a href="photos.html"><img class="boxImageBiggest" src="images/andybgoode.png" alt="Andy B Goode Headshot"></a></TD></TR>
 </TABLE>
 </DIV>
 
