--- a/news.html
+++ b/news.html
@@ -114,14 +114,14 @@ Xmas Party: I currently have space for some more Christmas gigs.... so book earl
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0014-thumb.jpg" alt="Andy B Goode"></a></td>
 <td><DIV class="boxHeading">SWADLINCOTE INTERNATIONAL FOOD AND DRINK FESTIVAL</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
 Saturday 15th October 2016 - 11am<br/>
-<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a> (Outside the lovely 'Curly Magpie' vintage shop).<br/>
-A Food Festival in Swadlincote. 'Andy B Goode' will be performing at 11am.<br/>
-Prepare yourself for Energetic 1950s Rock n Roll and tasty food from all over the world. It's gonna be great.<br/>
+<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely 'Curly Magpie' vintage shop. I will be performing at 11am.<br/>
+Prepare yourself for Energetic 1950s Rock n Roll and tasty food from all over the world.<br/>
+It's gonna be great.
 </P>
 </DIV>
 
