curly magpie link

--- a/news.html
+++ b/news.html
@@ -119,7 +119,7 @@ Xmas Party: I currently have space for some more Christmas gigs.... so book earl
 </TABLE>
 <P class='boxInfoArea'>
 Saturday 15th October 2016 - 11am<br/>
-<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely 'Curly Magpie' vintage shop. I will be performing at 11am.<br/>
+<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a>' vintage shop. I will be performing at 11am.<br/>
 Prepare yourself for Energetic 1950s Rock n Roll and tasty food from all over the world.<br/>
 It's gonna be great.
 </P>
