Music demo tracks redesign

--- a/news.html
+++ b/news.html
@@ -88,6 +88,17 @@ Snippets of many of my songs can be seen in my <a href="music.html#videos">'Summ
 </P>
 </DIV>
 
+ 
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/thejays0010-thumb.jpg" alt="Andy B Good at Xmas"></a></td>
+<td><DIV class="boxHeading">XMAS EVENTS</DIV></td></tr>
+</TABLE>
+<P class='boxInfoArea'>
+Xmas Party: I currently have space for some more Christmas gigs.... so book early if you want your party to swing.<br/>
+</P>
+</DIV>
+
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
@@ -97,17 +108,6 @@ Snippets of many of my songs can be seen in my <a href="music.html#videos">'Summ
 <P class='boxInfoArea'>
 Special Offer: Discounted gig pricing is currently available for 2016.<br/>
 Free Gigs: This year I am giving a few free gigs to worthy causes (Hospices, Charities, etc) so inquire soon if you represent a organisation that may enjoy Vintage Rock n Roll and Crooning.<br/>
-</P>
-</DIV>
-
- 
-<DIV class="boxPanel">
-<TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/thejays0007-thumb.jpg" alt="Andy B Good at Xmas"></a></td>
-<td><DIV class="boxHeading">XMAS EVENTS</DIV></td></tr>
-</TABLE>
-<P class='boxInfoArea'>
-Xmas Party: I currently have space for some more Christmas gigs.... so book early if you want your party to swing.<br/>
 </P>
 </DIV>
 
@@ -150,7 +150,7 @@ Birthday Parties: I have done a few birthday parties over the summer, which were
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0020-thumb.jpg" alt="Andy B Goode"></a></td>
 <td><DIV class="boxHeading">FOOD GUSTO FOOD FAIR</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -158,17 +158,6 @@ September 2016<br/>
 <a href="http://www.foodgusto.com/tamworth-festival/">Food Gusto Fayre</a> (Tamworth Castle, Pleasure Grounds).<br/>
 A Food Festival in Tamworth. I performed with '<a href="https://www.facebook.com/TheJaysVintage">The Jays</a>' multiple times during the day.<br/>
 What a lovely sunny day it was so the beautiful 1940s Andrews Sisters style Vintage Harmonies and Energetic 1950s Rock n Roll really added to the upbeat atmosphere. The food was so really varied and most tasty. So many spicy flavours. One for next years diary... I need some of those amazing meat pies and samosas.<br/>
-</P>
-</DIV>
-
-
-<DIV class="boxPanel">
-<TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></td>
-<td><DIV class="boxHeading">WARWICKSHIRE AND ANTIQUE FAYRE</DIV></td></tr>
-</TABLE>
-<P class='boxInfoArea'>
-Warwickshire and Antique Fayre (July): This was a great local vintage fayre in Poleworth. Loads of stalls with Dresses and other collectables. I sang for a couple of hours to add a retro touch. I even bought a few xmas presents!<br/>
 </P>
 </DIV>
 
@@ -187,6 +176,17 @@ I performed "Teenager in Love" live on the top local radio station TCR FM (<a hr
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></td>
+<td><DIV class="boxHeading">WARWICKSHIRE AND ANTIQUE FAYRE</DIV></td></tr>
+</TABLE>
+<P class='boxInfoArea'>
+Warwickshire and Antique Fayre (July): This was a great local vintage fayre in Poleworth. Loads of stalls with Dresses and other collectables. I sang for a couple of hours to add a retro touch. I even bought a few xmas presents!<br/>
+</P>
+</DIV>
+
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
 <tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0011-thumb.jpg" alt="Andy B Goode"></a></td>
 <td><DIV class="boxHeading">DOSTHILL CHURCH VINTAGE FETE</DIV></td></tr>
 </TABLE>
@@ -194,6 +194,22 @@ I performed "Teenager in Love" live on the top local radio station TCR FM (<a hr
 St. Pauls Dosthill Summer Vintage Fete 2016: This was a classic British summer Fete in Dosthill at the pretty Church. Loads of stalls, barbeque and yummy cakes were available. Many friends came and I sang (avoiding the light showers). People joined in on some songs.<br/>
 </P>
 </DIV>
+
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></td>
+<td><DIV class="boxHeading">DEMO TRACKS</DIV></td></tr>
+</TABLE>
+<P class='boxInfoArea'>
+Exciting news.... My first two demo tracks 'Johnny B. Goode' and 'Earth Angel' are now available as free mp3 downloads or listen on Listen on YouTube: <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>,  <a href="https://youtu.be/oRQt2_bjvMU">Earth Angel</a>
+<br/>
+<a href="/media/001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img alt="Johnny B Goode" src="images/demojohnnybgoodeart.jpg" width="120" height="120"></a> <a href="/media/002_-_AndyBGoode_-_Earth_Angel.mp3" download><img alt="Earth Angel" src="images/demoearthangelart.jpg" width="120" height="120"></a><br/>
+</P>
+</DIV>
+
+
+
 
 
 <!--
