--- a/music.html
+++ b/music.html
@@ -78,20 +78,53 @@
 <div id="music-area">
 <h2 id="music" class="banner">Music</h2>
 <div class="textbox-area">
-Here are two of my demo tracks: 'Johnny B. Goode' and 'Earth Angel'.
-<br/>Click on the album art to start the download of the free mp3.
 
-<br/>
 
-<a href="/media/001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>Johnny B. Goode</a> 
-<a href="/media/001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img alt="Johnny B Goode" src="images/demojohnnybgoodeart.jpg" width="120" height="120"></a> 
-<a href="/media/002_-_AndyBGoode_-_Earth_Angel.mp3" download>Earth Angel (Will You Be Mine)</a> 
-<a href="/media/002_-_AndyBGoode_-_Earth_Angel.mp3" download><img alt="Earth Angel" src="images/demoearthangelart.jpg" width="120" height="120"></a>
-<br/>
+<DIV class="infoBlock">
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD>Here are two of my demo tracks:<br/>
+'Johnny B. Goode' and 'Earth Angel'.</TD></TR>
+</TABLE>
+</DIV>
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD>Click on the album art to start the download of the free mp3.</TD></TR>
+</TABLE>
+</DIV>
+</DIV>
+
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="media/001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img class="boxImage" src="images/demojohnnybgoodeart.jpg" alt="Johnny B Goode"></a></TD>
+<TD><DIV class="boxHeading">JOHNNY B. GOODE</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Originally by the fantastic Chuck Berry in 1958, Johnny B Goode has taken its place as a Rock n Roll anthem.<br/>
+Its high energy all the way with vocals and guitar solos alternating taking the lead.<br/>
+My cover of this aims to capture the feeling of that original.<br/>
+<a href="media/001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>DOWNLOAD MP3: Johnny B. Goode</a>
+</P>
+</DIV>
+
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="media/002_-_AndyBGoode_-_Earth_Angel.mp3" download><img class="boxImage" src="images/demoearthangelart.jpg" alt="Earth Angel"></a></TD>
+<TD><DIV class="boxHeading">EARTH ANGEL</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Also called 'Earth Angel (Will You Be Mine)', the penguins sang this smooth love song to great acclaim in 1954. It was also featured in the movie 'Back To The Future' while Marty was 'fading away'. What a classic!<br/>
+I find performing this song passionately very enjoyable.<br/>
+<a href="media/002_-_AndyBGoode_-_Earth_Angel.mp3" download>DOWNLOAD MP3: Earth Angel</a>
+</P>
+</DIV>
 
 
 </div>
 </div>
+
 
 <div id="video-area">
 <h2 id="videos" class="banner">Videos</h2>
@@ -135,7 +168,7 @@ Again a song from 'Back to the Future'. This time it's a slow love song.<br/>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.1.2</li>
+<li>website: v2.1.4</li>
 </ul>
 </div>
 </div>
