--- a/videos.html
+++ b/videos.html
@@ -5,16 +5,16 @@
  All rights reserved
  -->
 <head>
-<title>Andy B Goode - Music - Vintage Rock n Roll Singer, Staffordshire, UK</title>
+<title>Andy B Goode - Videos - Vintage Rock n Roll Singer, Staffordshire, UK</title>
 <link rel="stylesheet" type="text/css" href="style.css"/>
 <meta http-equiv="Cache-Control" content="no-cache" />
 <meta http-equiv="Pragma" content="no-cache" />
 <meta http-equiv="expires" content="0" />
-<meta name="short" content="AndyBGoode 1950s/60 Rock and Roll Entertainer - Music"/>
+<meta name="short" content="AndyBGoode 1950s/60 Rock and Roll Entertainer - Music/Videos"/>
 <meta name="description" content="Andy B Goode 1950s/1960s Rock n Roll Singer based in Tamworth, Staffordshire, England">
 <meta name="author" content="Andrew Britton">
 <meta charset="UTF-8">
-<meta name="keywords" content="AndyBGoode,Andy B Goode,Singer,Vocalist,Tamworth,1950s,1960s,Rock n Roll,Rock and Roll,Entertainment,Vintage,Music,demo tracks">
+<meta name="keywords" content="AndyBGoode,Andy B Goode,Singer,Vocalist,Tamworth,1950s,1960s,Rock n Roll,Rock and Roll,Entertainment,Vintage,Music,Videos">
 
 <link rel="apple-touch-icon" sizes="57x57" href="/images/apple-icon-57x57.png">
 <link rel="apple-touch-icon" sizes="60x60" href="/images/apple-icon-60x60.png">
@@ -64,57 +64,82 @@
 <div id="main">
 
 
+<!--
+<div id="info-area"><div class="textbox-area">
+<h3>On this page you will find mp3s to download and my videos.</h3>
+<h3>Heres a link to my <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">'Andy B Goode' YouTube Channel</a></h3>
+</div></div>
+-->
 
-<div id="music-area">
-<h2 id="music" class="banner">Music</h2>
+
+
+<div id="video-area">
+<h2 id="videos" class="banner">Videos</h2>
 <div class="textbox-area">
 
 
 <DIV class="infoBlock">
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
-<TR><TD>Here are two of my demo tracks:<br/>
-'Johnny B. Goode' and 'Earth Angel'.</TD></TR>
+<TR><TD><DIV class="boxHeading">SUMMER SHOWREEL 2016</DIV></TD></TR>
 </TABLE>
+<P class='boxInfoArea'>
+You could play 'name that tune' while you listen.<br/>
+</P>
 </DIV>
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
-<TR><TD>Click on the album art to start the download of the free mp3.</TD></TR>
+<TR><TD>Snippets of many of my songs can be seen in my 'Andy B Goode Summer Showreel 2016'.<br/>
+This was recorded live at St Pauls Church Dosthill Summer Vintage Fete.</TD></TR>
 </TABLE>
 </DIV>
 </DIV>
+<br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/f4x4ei3muL8" frameborder="0" allowfullscreen></iframe>
+<br/>
 
 
-<DIV class="boxPanel">
+<DIV class="infoBlock">
+<DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
-<TR><TD><a href="media/001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download><img class="boxImage" src="images/demojohnnybgoodeart.jpg" alt="Johnny B Goode"></a></TD>
-<TD><DIV class="boxHeading">JOHNNY B. GOODE</DIV></TD></TR>
+<TR><TD><DIV class="boxHeading">TEENAGER IN LOVE</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-Originally by the fantastic Chuck Berry in 1958, Johnny B Goode has taken its place as a Rock n Roll anthem.<br/>
-Its high energy all the way with vocals and guitar solos alternating taking the lead.<br/>
-My cover of this aims to capture the feeling of that original.<br/>
-<a href="media/001_-_AndyBGoode_-_Johnny_B_Goode.mp3" download>DOWNLOAD MP3: Johnny B. Goode</a>
+It's great to hear people joining in at the chorus.<br/>
 </P>
 </DIV>
-
-
-<DIV class="boxPanel">
+<DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
-<TR><TD><a href="media/002_-_AndyBGoode_-_Earth_Angel.mp3" download><img class="boxImage" src="images/demoearthangelart.jpg" alt="Earth Angel"></a></TD>
-<TD><DIV class="boxHeading">EARTH ANGEL</DIV></TD></TR>
+<TR><TD>This was recorded at the Dosthill Summer Vintage Fayre. I also performed this song on on TCR FM at the 'Norton Juxta Twycross Summer Fete.</TD></TR>
+</TABLE>
+</DIV>
+</DIV>
+<br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/xfGqHgRePIY" frameborder="0" allowfullscreen></iframe>
+<br/>
+
+
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD><DIV class="boxHeading">JOHNNY B. GOODE</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-Also called 'Earth Angel (Will You Be Mine)', the penguins sang this smooth love song to great acclaim in 1954. It was also featured in the movie 'Back To The Future' while Marty was 'fading away'. What a classic!<br/>
-I find performing this song passionately very enjoyable.<br/>
-<a href="media/002_-_AndyBGoode_-_Earth_Angel.mp3" download>DOWNLOAD MP3: Earth Angel</a>
+'Johnny B. Goode' originally by the fantastic Chuck Berry (Audio only). 'Back to the Future' is one of my favourite movies, and this track really adds energy to the film.<br/>
 </P>
 </DIV>
+<br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/9E8LMdoa5co" frameborder="0" allowfullscreen></iframe>
+<br/>
 
+
+
+<h3>'Earth Angel' from Back To The Future (Audio only)</h3>
+Again a song from 'Back to the Future'. This time it's a slow love song.<br/>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/oRQt2_bjvMU" frameborder="0" allowfullscreen></iframe>
+<br/>
 
 </div>
 </div>
-
 
 
 
