--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 <a href="news.html">News</a>
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a>
-<a href="music.html#videos">Videos</a>
+<a href="videos.html">Videos</a>
 <a href="songlist.html">Songs</a>
 <a href="testimonials.html">Testimonials</a>
 <a href="#contact">Contact</a>
@@ -180,7 +180,7 @@ It's gonna be great.
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.1.3</li>
+<li>website: v2.1.5</li>
 </ul>
 </div>
 </div>
