--- a/news.html
+++ b/news.html
@@ -54,7 +54,7 @@
 <a href="news.html">News</a>
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a>
-<a href="music.html#videos">Videos</a>
+<a href="videos.html">Videos</a>
 <a href="songlist.html">Songs</a>
 <a href="testimonials.html">Testimonials</a>
 <a href="#contact">Contact</a>
@@ -230,7 +230,7 @@ info<br/>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.1.1</li>
+<li>website: v2.1.5</li>
 </ul>
 </div>
 </div>
