--- a/photos.html
+++ b/photos.html
@@ -469,7 +469,7 @@ function isPublishedNow(pubValue) {
 <a href="news.html">News</a>
 <a href="photos.html">Photos</a>
 <a href="music.html">Music</a>
-<a href="music.html#videos">Videos</a>
+<a href="videos.html">Videos</a>
 <a href="songlist.html">Songs</a>
 <a href="testimonials.html">Testimonials</a>
 <a href="#contact">Contact</a>
@@ -520,7 +520,7 @@ function isPublishedNow(pubValue) {
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.1.2</li>
+<li>website: v2.1.5</li>
 </ul>
 </div>
 </div>
