Videos with Ids

--- a/songlist.html
+++ b/songlist.html
@@ -85,7 +85,7 @@
 </DIV>
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
-<TR><TD>Snippets of many of these can be found in my <a href="music.html#videos">'Showreel'</a>, do go and have a listen.</TD></TR>
+<TR><TD>Snippets of many of these can be found in my <a href="videos.html#videoSummerShowReel2016">'Showreel'</a>, do go and have a listen.</TD></TR>
 </TABLE>
 </DIV>
 </DIV>
@@ -96,7 +96,7 @@
 <TD><DIV class="boxHeading">ROCK N ROLL / JIVE HITS</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-Chuck Berry: <a href="https://youtu.be/9E8LMdoa5co">Johnny B. Goode</a>; Rock and Roll Music<br/>
+Chuck Berry: <a href="videos.html#videoJohnnyBGoode">Johnny B. Goode</a>; Rock and Roll Music<br/>
 Bill Haley and His Comets: Rock Around the Clock; Shake, Rattle and Roll; See You Later Alligator<br/>
 Elvis: Blue Suede Shoes; Hound Dog; All Shook Up; Jailhouse Rock<br/>
 Eddie Cochran: C'mon Everybody<br/>
@@ -108,8 +108,8 @@ Chubby Checker: Let's Twist Again<br/>
 Buddy Holly: That'll Be the Day<br/>
 Richie Valens: La Bamba<br/>
 Frankie Lymon: Why Do Fools Fall in Love<br/>
-Dion and The Belmonts: <a href="https://youtu.be/xfGqHgRePIY">A Teenager in Love</a><br/>
-The Penguins: <a href="https://youtu.be/oRQt2_bjvMU">Earth Angel (Will You Be Mine)</a><br/>
+Dion and The Belmonts: <a href="videos.html#videoTeenagerInLove">A Teenager in Love</a><br/>
+The Penguins: <a href="videos.html#videoEarthAngel">Earth Angel (Will You Be Mine)</a><br/>
 Little Anthony and The Imperials: Tears on my Pillow<br/>
 Johnny Tillotson: Poetry in Motion<br/>
 Cliff Richard: Living Doll, Move It<br/>
