--- a/videos.html
+++ b/videos.html
@@ -78,7 +78,7 @@
 <div class="textbox-area">
 
 
-<DIV class="infoBlock">
+<DIV id="videoSummerShowReel2016" class="infoBlock">
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
 <TR><TD><DIV class="boxHeading">SUMMER SHOWREEL 2016</DIV></TD></TR>
@@ -99,7 +99,7 @@ This was recorded live at St Pauls Church Dosthill Summer Vintage Fete.</TD></TR
 <br/>
 
 
-<DIV class="infoBlock">
+<DIV id='videoTeenagerInLove' class="infoBlock">
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
 <TR><TD><DIV class="boxHeading">TEENAGER IN LOVE</DIV></TD></TR>
@@ -119,13 +119,20 @@ It's great to hear people joining in at the chorus.<br/>
 <br/>
 
 
+<DIV id='videoJohnnyBGoode' class="infoBlock">
 <DIV class="boxPanelNoBorder">
 <TABLE class='boxHeadingArea'>
 <TR><TD><DIV class="boxHeading">JOHNNY B. GOODE</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
-'Johnny B. Goode' originally by the fantastic Chuck Berry (Audio only). 'Back to the Future' is one of my favourite movies, and this track really adds energy to the film.<br/>
+Feel free to sing along.<br/>
 </P>
+</DIV>
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD>'Johnny B. Goode' originally by the fantastic Chuck Berry. 'Back to the Future' is one of my favourite movies, and this track really adds energy to the film.</TD></TR>
+</TABLE>
+</DIV>
 </DIV>
 <br/>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/9E8LMdoa5co" frameborder="0" allowfullscreen></iframe>
@@ -133,10 +140,28 @@ It's great to hear people joining in at the chorus.<br/>
 
 
 
-<h3>'Earth Angel' from Back To The Future (Audio only)</h3>
-Again a song from 'Back to the Future'. This time it's a slow love song.<br/>
+<DIV id='videoEarthAngel' class="infoBlock">
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD><DIV class="boxHeading">EARTH ANGEL</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+My cover of a classic love song.<br/>
+</P>
+</DIV>
+<DIV class="boxPanelNoBorder">
+<TABLE class='boxHeadingArea'>
+<TR><TD>'Earth Angel' from originally by 'The Penguins'.<br/>
+I just keep singing songs from the 'Back to the Future' movie.</TD></TR>
+</TABLE>
+</DIV>
+</DIV>
+<br/>
 <iframe width="560" height="315" src="https://www.youtube.com/embed/oRQt2_bjvMU" frameborder="0" allowfullscreen></iframe>
 <br/>
+
+
+
 
 </div>
 </div>
