£100 Offer on Home Page

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImage" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></TD>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></TD>
 <TD><DIV class="boxHeading">Dynamic Rock n Roll Vocalist and Heartfelt Crooner</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
@@ -130,12 +130,12 @@
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImage" src="photos/andybgoode0010-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0010-thumb.jpg" alt="AndyBGoode"></a></TD>
 <TD><DIV class="boxHeading">Quality Vintage Entertainment</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
 <ul>
-<li>Available for: Birthdays, Fayres, Fetes, Food Fayres, Vintage Events, Parties, Dances, Church Events, OAP Homes, Care Homes, Hospices, etc...</li>
+<li>Available for: Birthdays, Anniversaries, Fayres, Fetes, Food Fayres, Vintage Events, Parties, Dances, Church Events, Residential Homes, Care Homes, Hospices, etc...</li>
 <li>Based in Tamworth, Staffordshire, Midlands</li>
 <li>I only use high quality backing tracks</li>
 <li>Fun 'Teddy boy' style outfit</li>
@@ -155,16 +155,30 @@
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImage" src="photos/andybgoode0014-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0014-thumb.jpg" alt="AndyBGoode"></a></TD>
 <TD><DIV class="boxHeading">Swadlincote International Food and Drink Festival</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
 Saturday 15th October 2016 - 11am<br/>
-<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a>' vintage shop. I will be performing at 11am.<br/>
+<a href="http://www.south-derbys.gov.uk/community_and_living/community_events/international_food/default.asp">Swadlincote International Food and Drink Festival</a>. Outside the lovely '<a href="http://www.curlymagpie.co.uk/">Curly Magpie</a>' vintage shop. I will be performing from 11am.<br/>
 Prepare yourself for Energetic 1950s Rock n Roll and tasty food from all over the world.<br/>
 It's gonna be great.
 </P>
 </DIV>
+
+<DIV class="boxPanel">
+<TABLE class='boxHeadingArea'>
+<TR><TD><a href="photos.html"><img class="boxImageBigger" src="photos/andybgoode0019-thumb.jpg" alt="AndyBGoode"></a></TD>
+<TD><DIV class="boxHeading">SPECIAL OFFER:<br/>1 hour for £100</DIV></TD></TR>
+</TABLE>
+<P class='boxInfoArea'>
+Right now, I am offering gigs starting at just:<br/>
+£100 + travel expenses for a 1h performance.<br/>
+Remember at this time of year, this could be used to bring some xmas cheer vintage style.<br/>
+Limited time offer, Terms and conditions apply.
+</P>
+</DIV>
+
 
 </div>
 </div>
@@ -180,7 +194,7 @@ It's gonna be great.
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.1.5</li>
+<li>website: v2.1.6</li>
 </ul>
 </div>
 </div>
