--- a/news.html
+++ b/news.html
@@ -80,7 +80,7 @@
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<TR><TD><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0010-thumb.jpg" alt="Rock Around the Clock"></a></TD>
+<TR><TD><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0010-thumb.jpg" alt="Andy B Goode Showreel"></a></TD>
 <TD><DIV class="boxHeading">SUMMER SHOWREEL 2016</DIV></TD></TR>
 </TABLE>
 <P class='boxInfoArea'>
@@ -91,30 +91,30 @@ Snippets of many of my songs can be seen in my <a href="music.html#videos">'Summ
  
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/thejays0010-thumb.jpg" alt="Andy B Good at Xmas"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/thejays0010-thumb.jpg" alt="Andy B Good at Christmas"></a></td>
 <td><DIV class="boxHeading">XMAS EVENTS</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
-Xmas Party: I currently have space for some more Christmas gigs.... so book early if you want your party to swing.<br/>
+Xmas Party: I currently have space for some more Christmas gigs.... so book soon if you want your party to swing vintage style.<br/>
 </P>
 </DIV>
 
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0012-thumb.jpg" alt="Andy B Goode"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0012-thumb.jpg" alt="Andy B Goode offers"></a></td>
 <td><DIV class="boxHeading">SPECIAL OFFERS</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
 Special Offer: Discounted gig pricing is currently available for 2016.<br/>
-Free Gigs: This year I am giving a few free gigs to worthy causes (Hospices, Charities, etc) so inquire soon if you represent a organisation that may enjoy Vintage Rock n Roll and Crooning.<br/>
+Free Gigs: This year I am giving a few free gigs to local worthy causes (Hospices, Charities, etc) so inquire soon if you represent a organisation that may enjoy Vintage Rock n Roll and Crooning.<br/>
 </P>
 </DIV>
 
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0014-thumb.jpg" alt="Andy B Goode"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0014-thumb.jpg" alt="Andy B Goode at Swadlincote"></a></td>
 <td><DIV class="boxHeading">SWADLINCOTE INTERNATIONAL FOOD AND DRINK FESTIVAL</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -128,7 +128,7 @@ It's gonna be great.
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode at Care Homes"></a></td>
 <td><DIV class="boxHeading">CARE HOMES</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -139,7 +139,7 @@ It's great singing at care homes. See their faces light up as they recognise a f
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0016-thumb.jpg" alt="Andy B Goode"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0016-thumb.jpg" alt="Andy B Goode in Derby"></a></td>
 <td><DIV class="boxHeading">BIRTHDAY PARTIES</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -150,7 +150,7 @@ Birthday Parties: I have done a few birthday parties over the summer, which were
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0020-thumb.jpg" alt="Andy B Goode"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0020-thumb.jpg" alt="Andy B Goode at Tamworth"></a></td>
 <td><DIV class="boxHeading">FOOD GUSTO FOOD FAIR</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -164,7 +164,7 @@ What a lovely sunny day it was so the beautiful 1940s Andrews Sisters style Vint
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0017-thumb.jpg" alt="Andy B Goode"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0017-thumb.jpg" alt="Andy B Goode at Norton Juxta Twycross"></a></td>
 <td><DIV class="boxHeading">NORTON JUXTA TWYCROSS SUMMER VILLAGE FETE</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -176,7 +176,7 @@ I performed "Teenager in Love" live on the top local radio station TCR FM (<a hr
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0004-thumb.jpg" alt="Andy B Goode at Polesworth"></a></td>
 <td><DIV class="boxHeading">WARWICKSHIRE AND ANTIQUE FAYRE</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -187,7 +187,7 @@ Warwickshire and Antique Fayre (July): This was a great local vintage fayre in P
 
 <DIV class="boxPanel">
 <TABLE class='boxHeadingArea'>
-<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0011-thumb.jpg" alt="Andy B Goode"></a></td>
+<tr><td><a href="photos.html"><img class="boxImageSmaller" src="photos/andybgoode0011-thumb.jpg" alt="Andy B Goode at Dosthill"></a></td>
 <td><DIV class="boxHeading">DOSTHILL CHURCH VINTAGE FETE</DIV></td></tr>
 </TABLE>
 <P class='boxInfoArea'>
@@ -230,7 +230,7 @@ info<br/>
 <li>Instagram: <a href="https://www.instagram.com/andybgoodevocalist">andybgoodevocalist</a></li>
 <li>YouTube: <a href="https://www.youtube.com/channel/UCHJsASS25ndVJYEykEK9BLQ">Andy B Goode</a></li>
 <li>Twitter: <a href="http://www.twitter.com/AndyBGoode">AndyBGoode</a></li>
-<li>website: v2.1.5</li>
+<li>website: v2.1.6</li>
 </ul>
 </div>
 </div>
